# viva-la-gloria

./: .gitignore  Cargo.toml  LICENSE  README.md  manifest.json
scripts/: generate_card_previews.py
src/: app.rs  card_repo.rs  contracts.rs  errors.rs  handlers.rs  main.rs  models.rs  pdf.rs
src/http/: dto.rs  mod.rs  router.rs  state.rs
src/http/handlers/: cards.rs  pdf.rs
src/http/middleware/: rate_limit.rs
src/repo/: cards.rs
src/service/: cards.rs  mod.rs  pdf.rs
src/service/pdf/: generator.rs  layout.rs  mod.rs  service.rs  storage.rs
static/: index.html  script.js  style.css
